# GetDiscogsRelease

./: CMakeLists.txt  CMakePresets.json  Details.md  README.md
GetDiscogsRelease/: CMakeLists.txt  Constants.h  Functions.cpp  Functions.h  GetDiscogsRelease.cpp  GetDiscogsRelease.h
Scripts/: AB_GetDiscogsRelease.sh  PS_GetDiscogsRelease.ps1
docs/: Documentation.md
